<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="4dp"
            card_view:cardCornerRadius="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/question1_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/q1_financialCrisis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/financialCrisisLabel" />

                <CheckBox
                    android:id="@+id/q1_lavishSpending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lavishSpendingLabel" />

                <CheckBox
                    android:id="@+id/q1_systemInequality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/systemInequalityLabel" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="4dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bastille" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/question_2_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/q2_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q2_stormingBastille"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="The storming of the Bastille" />

                    <RadioButton
                        android:id="@+id/q2_juneDays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="The June days" />

                    <RadioButton
                        android:id="@+id/q2_conspiracyEquals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="The conspiracy of equals" />

                    <RadioButton
                        android:id="@+id/q2_triumphPeople"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Triumph of the people" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="4dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tenniscourt" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/question3_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/q3_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q3_tennisClub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="That the Third Estate would never belong to a Tennis club" />

                    <RadioButton
                        android:id="@+id/q3_deathOfKing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="That King Louis XVI should die" />

                    <RadioButton
                        android:id="@+id/q3_assemblyTogether"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="That the Third Estate/National Assembly would remain together until a Constitution was written" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="4dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/robespierre" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/question4_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/q4_leaderReignOfTerror"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="4dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/question5_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/q5_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q5_gangOfFour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gang_of_fourLabel" />

                    <RadioButton
                        android:id="@+id/q5_nationalAssembly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/national_assemblyLabel" />

                    <RadioButton
                        android:id="@+id/q5_directorate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/directorateLabel" />

                    <RadioButton
                        android:id="@+id/q5_committeePublicSafety"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/c_SafetyLabel" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/checkAnswersButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:onClick="checkQuizAnswers"
            android:text="@string/check_answersLabel"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:id="@+id/scoreLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="resetQuiz"
                android:text="@string/resetLabel"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>